# nenuzhno-engine_iter1

./: .gitignore  README.md
NenuzhnoEngine-Android/: AndroidManifest.xml
NenuzhnoEngine-Android/jni/: Android.mk  Application.mk
assets/skinning/: SearchPaths.txt  config.txt
assets/ssr/: SearchPaths.txt
assets/tpsGame/: tpsConfig.txt
assets/vol_light/: config.txt
demos/ComprTex/: Android.mk  ComprTex.cpp  Makefile.linux  Makefile.mingw
demos/SSR/: Android.mk  Makefile.linux  Makefile.mingw  ssr.cpp
demos/StarFleet/: Android.mk  Explosion.cpp  Makefile.linux  Makefile.mingw  Projectile.cpp  Ship.cpp  TODO.txt  entity.h  input.cpp  star-fleet.cpp  star-fleet.h
demos/VolLight/: Android.mk  Makefile.linux  Makefile.mingw  Volumetrics.cpp  Volumetrics.h  main.cpp
demos/blur-test/: Android.mk  Makefile.mingw  blur.cpp
demos/cube/: Android.mk  Makefile.linux  Makefile.mingw  cube.cpp
demos/gravity/: Android.mk  Makefile.linux  Makefile.mingw  main.cpp
demos/path_tracing/: Makefile.linux  Makefile.mingw  glsl_pt.cpp
demos/skinning/: Android.mk  CMakeLists.txt  Makefile.linux  Makefile.mingw  README.md  main.cpp  mdl_loader.cpp  mdl_loader.h
demos/tpsGame/: Android.mk  InputSystem.h  Makefile.linux  Makefile.mingw  TODO.txt  init.cpp  scene_txt_loader.cpp  tpsMaterials.cpp  tpsMaterials.h  tpsMenu.cpp  tpsMenu.h  tpsObjects.cpp  tpsObjects.h  (+6 more)
docs/: TODO.txt  engine_structure.txt  model_format.txt  nenuzhno-engine.txt
src/: Android.mk  Makefile.linux  Makefile.mingw  android_backend.cpp  button.h  engine.h  input.h  log.cpp  log.h  main.cpp
(+117 files in other folders)
